--- a/src/App.css
+++ b/src/App.css
@@ -66,3 +66,10 @@ form {
     background-color: #c5c6d0;
 }
 
+.todo {
+    border: 1px solid saddlebrown;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
